* Fixing error reporting by yaml files* merging mysql/mariadb serivce into wordpress service
Signed-off-by: Patrick Emer <pemer@afdata.de>

--- a/wordpress/WordpressMariadbRC.yaml
+++ b/wordpress/WordpressMariadbRC.yaml
@@ -1,15 +1,11 @@
 apiVersion: v1
 kind: ReplicationController
-
 metadata:
-  name: ready-to-deploy-wordpress
-  namespace: default
-  
-
+  generation: 1
   labels:
     app: my-wordpress
-
-
+  name: ready-to-deploy-wordpress
+  namespace: default
 
 spec:
   replicas: 1
@@ -17,34 +13,27 @@ spec:
     app: my-wordpress
   template:
     metadata:
-      name: my-wordpress
-      creationTimestamp: null
       labels:
         app: my-wordpress
 
-
-    
     spec:
       containers:
       - name: wordpress
         image: wordpress
         ports:
-        - name: wordpress
-          containerPort: 9191
+        - name: http
+          containerPort: 80
           protocol: TCP
-
 
         env:
         - name: WORDPRESS_DB_HOST
-          value: 127.0.0.1:3306
+          value: my-wordpress:3306
         - name: WORDPRESS_DB_USER
           value: root
         - name: WORDPRESS_DB_PASSWORD
           value: abc123
         - name: WORDPRESS_DB_NAME
           value: Wordpress
-
-
 
       - name: mysql
         image: mariadb
@@ -56,8 +45,12 @@ spec:
         - name: MYSQL_ROOT_PASSWORD
           value: abc123
 
-    status:
-      replicas: 1
-      fullyLabeledReplicas: 1
-      observedGeneration: 6
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+
+status:
+  fullyLabeledReplicas: 1
+  observedGeneration: 1
+  replicas: 1
 
