--- a/wordpress/WordpressMariadbRC+Service.yaml
+++ b/wordpress/WordpressMariadbRC+Service.yaml
@@ -10,7 +10,7 @@ spec:
   - name: mysql
     port: 3306
     protocol: TCP
-  - name: wordpress
+  - name: http
     port: 80
     protocol: TCP
     targetPort: 8888
@@ -21,16 +21,12 @@ spec:
 ---
 apiVersion: v1
 kind: ReplicationController
-
 metadata:
-  name: ready-to-deploy-wordpress
-  namespace: default
-  
-
+  generation: 1
   labels:
     app: my-wordpress
-
-
+  name: ready-to-deploy-wordpress
+  namespace: default
 
 spec:
   replicas: 1
@@ -38,26 +34,21 @@ spec:
     app: my-wordpress
   template:
     metadata:
-      name: my-wordpress
-      creationTimestamp: null
       labels:
         app: my-wordpress
 
-
-    
     spec:
       containers:
       - name: wordpress
         image: wordpress
         ports:
-        - name: wordpress
-          containerPort: 9191
+        - name: http
+          containerPort: 80
           protocol: TCP
-
 
         env:
         - name: WORDPRESS_DB_HOST
-          value: 127.0.0.1:3306
+          value: my-wordpress:3306
         - name: WORDPRESS_DB_USER
           value: root
         - name: WORDPRESS_DB_PASSWORD
@@ -65,19 +56,22 @@ spec:
         - name: WORDPRESS_DB_NAME
           value: Wordpress
 
-
-
       - name: mysql
         image: mariadb
         ports:
-        - name: mysql
+        - name: mariadb
           containerPort: 3306
           protocol: TCP
         env:
         - name: MYSQL_ROOT_PASSWORD
           value: abc123
 
-    status:
-      replicas: 1
-      fullyLabeledReplicas: 1
-      observedGeneration: 6
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 30
+
+status:
+  fullyLabeledReplicas: 1
+  observedGeneration: 1
+  replicas: 1
+
