--- a/magento/nginx/Dockerfile
+++ b/magento/nginx/Dockerfile
@@ -23,8 +23,6 @@ RUN yum install -y      nginx \
                         gettext \
                         zip
 
-
-
 # forward request and error logs to docker log collector
 RUN ln -sf /dev/stdout /var/log/nginx/access.log \
         && ln -sf /dev/stderr /var/log/nginx/error.log
@@ -34,14 +32,31 @@ ADD  ./parse /usr/local/src/parse
 ADD  ./start /usr/local/src/start
 RUN chmod 775 /usr/local/src/parse /usr/local/src/start /etc/nginx/conf.d/default.conf
 
+ENV MAGENTO_VERSION 1.9.3.8
+
+RUN mkdir -p /var/www/html
+
+RUN cd /tmp && \
+    curl https://codeload.github.com/OpenMage/magento-mirror/tar.gz/$MAGENTO_VERSION -o $MAGENTO_VERSION.tar.gz && \
+    tar xvf $MAGENTO_VERSION.tar.gz && \
+    mv magento-mirror-$MAGENTO_VERSION/* magento-mirror-$MAGENTO_VERSION/.htaccess /var/www/html
+
+RUN chown -R www-data:www-data /var/www/html
+
+COPY ./bin/install-magento /usr/local/bin/install-magento
+RUN chmod +x /usr/local/bin/install-magento
+
+RUN yum install -y mysql
+RUN mkdir -p /var/www/html/media
+COPY ./sampledata/magento-sample-data-1.9.1.0.tgz /opt/
+COPY ./bin/install-sampledata-1.9 /usr/local/bin/install-sampledata
+RUN chmod +x /usr/local/bin/install-sampledata
+RUN sh -c /usr/local/bin/install-sampledata
+
+RUN bash -c 'bash < <(curl -s -L https://raw.github.com/colinmollenhour/modman/master/modman-installer)'
+RUN mv ~/bin/modman /usr/local/bin
 
 WORKDIR /var/www/html
-
-#RUN cd /tmp && \ 
-#  curl https://codeload.github.com/magento/magento2/tar.gz/$MAGENTO_VERSION -o $MAGENTO_VERSION.tar.gz && \
-#  tar xvf $MAGENTO_VERSION.tar.gz && \
-#  mv magento2-$MAGENTO_VERSION/* magento2-$MAGENTO_VERSION/.htaccess ./
-
 
 EXPOSE 80 443
 
