--- a/magento/nginx.yaml
+++ b/magento/nginx.yaml
@@ -2,29 +2,22 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: nginx
+    app: nginx
   name: nginx
 spec:
+  externalTrafficPolicy: Cluster
   ports:
-    - port: 80
+  - name: 80-80
+    port: 80
+    protocol: TCP
+    targetPort: 80
+    nodePort: 30080
   selector:
     app: nginx
-  type: ClusterIP
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    name: nginxip
-  name: nginxip
-spec:
-  ports:
-    - port: 80
-  selector:
-    app: nginx
+  sessionAffinity: None
   type: NodePort
+status:
+  loadBalancer: {}
 
 ---
 
@@ -52,8 +45,8 @@ spec:
          - name: VARHOST
            value: fpm
          - name: MAGENTO_VERSION
-#        command: ["/bin/sh","-c"]
-#        args: ["/usr/local/bin/magento-install.sh"]
+           #command: ["/bin/sh","-c"]
+           #args: ["/usr/local/bin/magento-install.sh"]
         ports:
         - containerPort: 80
           name: nginx
