[FEATURE] Magento Deployment mit Kubernetes
* Updated yaml files for mysql, fpm, nginx
* Updated ingress
* Added preinstallation of php modules to start magento setup
* Added shell script for composer installation and prepare to setup

Refs: #290
Status: ready

--- a/magento/ingresses/nginx.yaml
+++ b/magento/ingresses/nginx.yaml
@@ -1,13 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  namespace: magento2
   name: nginx
   annotations:
     kubernetes.io/ingress.class: traefik
     traefik.frontend.rule.type: PathPrefixStrip
 spec:
   rules:
-  - host: nginx.localhost
+  - host: magento.afdata.local 
     http:
       paths:
       - path: /
