--- a/magento/fpm.yaml
+++ b/magento/fpm.yaml
@@ -1,32 +1,33 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: magento2
   labels:
     name: fpm
   name: fpm
 spec:
   ports:
-    - name: fpm
-      port: 9000
+    - port: 9000
   selector:
     app: fpm
-  type: LoadBalancer
-
+  #type: LoadBalancer
+  clusterIP: None
 ---
 
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  generation: 1
   labels:
     app: fpm
   name: fpm
-  namespace: default
+  namespace: magento2
 
 spec:
-  replicas: 1
   selector:
-    app: fpm
+    matchLabels:
+      app: fpm
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -34,26 +35,22 @@ spec:
 
     spec:
       containers:
-      - name: fpm
-        image: localhost:5000/php-fpm
+      - image: infra.afdata.local:5000/php-fpm
+        imagePullPolicy: Always
+        name: fpm
         ports:
-        - name: fpm
-          containerPort: 9000
+        - containerPort: 9000
           protocol: TCP
         volumeMounts:
-            - mountPath: /var/www/html
+            - mountPath: /var/www/html:rw
               name: magento
       volumes:
       - name: magento
-        hostPath:
-          path: /datas/magento
-
+        nfs:
+          server: 192.168.50.85
+          path: "/srv/nfsshare/k8s-stage/magento2"
 
       dnsPolicy: ClusterFirst
       restartPolicy: Always
-      terminationGracePeriodSeconds: 30
+      terminationGracePeriodSeconds: 5
 
-status:
-  fullyLabeledReplicas: 1
-  observedGeneration: 1
-  replicas: 1
