[FEATURE] Added Functionality for automate magento deployment.
* Minor updates
* Nginx fixes
* Added shell script for Magento installation

Refs: #
Status: ready

--- a/magento/ingresses/nginx.yaml
+++ b/magento/ingresses/nginx.yaml
@@ -8,7 +8,7 @@ metadata:
     traefik.frontend.rule.type: PathPrefixStrip
 spec:
   rules:
-  - host: magento.afdata.local 
+  - host: magento.example.local
     http:
       paths:
       - path: /
